# rust-website

./: Cargo.toml  Rocket.toml
migrations/2019-12-14-102916_start/: down.sql  up.sql
resources/: default_preferences.json
scripts/: create_db.sh
src/: error.rs  main.rs  page_context.rs  schema.rs
src/db/: forms.rs  interface.rs  mod.rs  problem.rs  user.rs
src/requests/: home.rs  login.rs  mod.rs
static/: main.css
templates/: home.hbs  login.hbs
templates/partials/: header.hbs  loginbox.hbs  problems.hbs  registerbox.hbs
